@startuml
class BetterTogetherApp {
    - onCreate()
}

abstract class BaseActivity {
    + setupBottomNavigation()
}

class LoginActivity extends BaseActivity {
    - firebaseAuthWithGoogle(account: GoogleSignInAccount)
    - goToMainScreen()
    - checkAndCreateUser()
}

class PaymentActiviy extends BaseActivity{
    - PaypalAPi
}
class NotificationActivity extends BaseActivity{
    - NotifQueue: Queue
    + getLastNotif(): Message
    + removeNotif(): void

}
class RoomActivity extends BaseActivity {
    + setupChat(roomId: String)
    + fetchRoomDetails(roomId: String)
}
class NewRoomActivity extends BaseActivity {
    + validateInputs(): Boolean
    + submitForm(additionalInputs: List<EditText>)
    + createEditText(hint: String): EditText
}
class HomeActivity extends BaseActivity {
    + profileButton: ImageButton
    + newRoomButton: Button
    + yourRoomsButton: Button
}

class ProfileActivity extends BaseActivity {
    + displayProfile()
    + signOut()
}

class RoomsActivity extends BaseActivity {
    + loadUserRooms()
    + roomsAdapter: RoomsAdapter
}
class RoomExplorerActivity extends BaseActivity {
    + loadAllRooms()
    + setupSearchBar()
}
class UserExplorerActivity extends BaseActivity {
    + loadAllUsers()
    + setupSearchBar()
}


class RoomsAdapter {
    - rooms: List<Pair<String, String>>
    + onRoomClick: (String) -> Unit
}

class ChatAdapter {
    - messages: List<Message>
}

class Message {
    + sender: String
    + message: String
    + timestamp: Long
}

class FirestoreUtils {
    + isOwnerRole(roomId: String, callback: (Boolean) -> Unit)
}
NotificationActivity -[dotted]-> Message

BaseActivity <|-- LoginActivity
BaseActivity <|-- HomeActivity
BaseActivity <|-- ProfileActivity
BaseActivity <|-- RoomsActivity
BaseActivity <|-- RoomActivity
BaseActivity <|-- RoomExplorerActivity
BaseActivity <|-- NewRoomActivity
RoomsActivity *--> RoomsAdapter
RoomActivity *--> ChatAdapter
ChatAdapter *--> Message
RoomExplorerActivity *--> RoomsAdapter
NewRoomActivity *--> FirestoreUtils
RoomActivity *--> FirestoreUtils
@enduml
